# HomeworkGB

./: main.cpp
Algorithms and data structures/: main.cpp
Algorithms and data structures/DZ10/: main.cpp
Algorithms and data structures/DZ12/: main.cpp
Algorithms and data structures/DZ13/: main.cpp
Algorithms and data structures/DZ15/: main.cpp
Algorithms and data structures/DZ16/: main.cpp
Algorithms and data structures/DZ3/: main.cpp
Algorithms and data structures/DZ4/: main.cpp
Algorithms and data structures/DZ6/: main.cpp
Algorithms and data structures/DZ7/: main.cpp
Algorithms and data structures/DZ9/: main.cpp
BazeCPP/DZ2/: main.cpp
BazeCPP/DZ3/: Task14.cpp  main.cpp
BazeCPP/DZ4/: main.cpp
BazeCPP/DZ5/: main.cpp
BazeCPP/DZ6/: main.cpp
BazeCPP/DZ7/: main.cpp  mylib.cpp  mylib.h
BazeCPP/DZ8/: main.cpp
CPP difficult moments/DZ1/: PhoneBook.txt  main.cpp  myclasses.h
CPP difficult moments/DZ2/: WarAndPeace.txt  main.cpp  myclasses.cpp  myclasses.h
CPP difficult moments/DZ3/: main.cpp  myclasses.cpp  myclasses.h
Desing pattern GOF/DZ1/: CMakeLists.txt
Desing pattern GOF/DZ1/Proxy/: main.cpp
Desing pattern GOF/DZ1/Proxy/include/: FileLoggerSingleton.h  LoggerSingleton.h  MyTools.h
Desing pattern GOF/DZ1/Proxy/src/: FileLoggerSingleton.cpp  LoggerSingleton.cpp  MyTools.cpp  SBomber.cpp  ScreenSingleton.cpp
Desing pattern GOF/DZ1/Singleton/: CMakeLists.txt  main.cpp
Desing pattern GOF/DZ1/Singleton/include/: MyTools.h
Desing pattern GOF/DZ1/Singleton/src/: MyTools.cpp  SBomber.cpp  ScreenSingleton.cpp  Tank.cpp
(+46 files in other folders)
